# MLiPPaA

./: .gitignore  BaseClassification.py  BayesLayer.py  BinaryClassification.py  DataLoader.py  EvaluationCallback.py  Evaluator.py  LICENSE  MultiClassification.py  README.md  RecurrentClassification.py  exam.py  helpers.py  pyproject.toml
Element2/: BaseClassification.py  BinaryClassification.py  DataLoader.py  Evaluator.py  MultiClassification.py  RecurrentClassification.py  helpers.py  main.py
Element3/: best_binary_classifier.h5  best_multiclass_classifier.h5  best_recurrent_classifier.h5  read_and_run.py
